camel-k/2.9.x/traits/owner.md
# Owner Trait

The Owner trait ensures that all created resources belong to the integration being created and transfers annotations and labels on the integration onto these owned resources.

This trait is available in the following profiles: **Kubernetes, Knative, OpenShift**.

> **Note**
> The owner trait is a **platform trait** and cannot be disabled by the user.

## Configuration

Trait properties can be specified when running any integration with the CLI:

```console
$ kamel run --trait owner.[key]=[value] --trait owner.[key2]=[value2] integration.yaml
```

The following configuration options are available:

  
| Property | Type | Description |
| --- | --- | --- |
| `owner.enabled` | `bool` | Can be used to enable or disable a trait. All traits share this common property. |
| `owner.target-annotations` | `[]string` | The set of annotations to be transferred |
| `owner.target-labels` | `[]string` | The set of labels to be transferred |